fix white mode color + add hobbies part + fix alignement of the contact part

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,7 +1,7 @@
 @import './base.css';
 
 :root {
-  --background-color: #ffffff;
+  --background-color: #f7f2f0;
   --text-color: #000000;
 }
 
